(fix): Remove copyright of hero block and extra spaces on print

--- a/theme/themes/eea/extras/banner.less
+++ b/theme/themes/eea/extras/banner.less
@@ -229,8 +229,14 @@
 }
 
 @media print {
+  .eea.banner .gradient .content,
   .eea.banner .image .gradient .content {
+    padding-top: 15px;
+  }
+
+  .eea.banner .gradient .content > div > div {
     padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
